--- a/rootdir/init.recovery.semc.rc
+++ b/rootdir/init.recovery.semc.rc
@@ -3,7 +3,7 @@ on init
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 122000
 
     write /sys/class/android_usb/android0/idVendor 0fce
-    write /sys/class/android_usb/android0/idProduct 6166
+    write /sys/class/android_usb/android0/idProduct 615a
     write /sys/class/android_usb/android0/functions mass_storage,adb
 
 on post-fs
